[project]
name = "uclaw"
version = "0.1.0"
description = "Turn your Claude Code into OpenClaw — bridge Telegram and Feishu to Claude Code via Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "python-telegram-bot>=21.0",
    "lark-oapi>=1.3.0",
    "croniter>=2.0",
]

[project.scripts]
uclaw = "uclaw.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]
